--- a/GroupProject-Annie's garden/FrontEnd/guide-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/guide-index.html
@@ -221,9 +221,9 @@
 
         .trigger_imgBox7 {
             position: absolute;
-            width: 147px;
-            height: 122px;
-            top: 310px;
+            width: 120px;
+            /* height: 122px; */
+            top: 324px;
             left: 151px;
             z-index: 2;
             display: none;
@@ -231,30 +231,30 @@
 
         .trigger_imgBox8 {
             position: absolute;
-            width: 159px;
-            height: 125px;
-            top: 403px;
-            left: 51px;
+            width: 120px;
+            /* height: 125px; */
+            top: 421px;
+            left: 72px;
             z-index: 3;
             display: none;
         }
 
         .trigger_imgBox9 {
             position: absolute;
-            width: 192px;
-            height: 122px;
-            top: 420px;
-            left: 200px;
+            width: 121px;
+            /* height: 122px; */
+            top: 443px;
+            left: 245px;
             z-index: 4;
             display: none;
         }
 
         .trigger_imgBox10 {
             position: absolute;
-            width: 84px;
+            width: 100px;
             height: 79px;
-            top: 526px;
-            left: 865px;
+            top: 520px;
+            left: 855px;
             z-index: 0;
             display: none;
         }
@@ -527,12 +527,14 @@
             width: 50px;
             height: 51px;
         }
+
         @media (max-width:1400px) {
             .imgShow {
                 width: 75%;
                 height: 80%;
             }
         }
+
         @media (max-width: 1110px) {
 
             .imgBox_Map {
@@ -596,16 +598,16 @@
             }
 
             .trigger_imgBox6 {
-                width: 100px;
-                top: 6px;
+                width: 120px;
+                top: -3px;
                 left: 302px;
             }
 
             .trigger_imgBox7 {
                 position: absolute;
-                width: 109px;
-                height: 87px;
-                top: 204px;
+                width: 120px;
+                /* height: 87px; */
+                top: 200px;
                 left: 94px;
                 z-index: 2;
                 display: none;
@@ -613,31 +615,32 @@
 
             .trigger_imgBox8 {
                 position: absolute;
-                width: 115px;
-                height: 84px;
-                top: 272px;
+                width: 120px;
+                /* height: 84px; */
+                top: 266px;
                 left: 24px;
                 z-index: 3;
                 display: none;
             }
 
             .trigger_imgBox9 {
-                width: 105px;
-                height: 74px;
-                top: 283px;
-                left: 153px;
+                width: 120px;
+                /* height: 74px; */
+                top: 280px;
+                left: 140px;
             }
 
             .trigger_imgBox10 {
-                width: 76px;
-                height: 69px;
-                top: 339px;
-                left: 571px;
+                width: 120px;
+                /* height: 69px; */
+                top: 330px;
+                left: 547px;
             }
 
             .page_3_banner .banner_decorationBox {
                 height: 100px;
             }
+
             .imgShow {
                 width: 90%;
                 height: 70%;
@@ -1201,7 +1204,7 @@
     <script>
         AOS.init();
     </script>
-   
+
     <script>
         var page_3_imgBox = document.querySelectorAll(".page_3_imgBox")
         var fullScreen_mask = document.querySelectorAll(".fullScreen_mask")
@@ -1268,7 +1271,7 @@
         }
 
     </script>
-  
+
 </body>
 
 </html>
