--- a/GroupProject-Annie's garden/FrontEnd/princess-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/princess-index.html
@@ -1209,7 +1209,7 @@
                 <img src="./素材/10-公主故事屋/princess_09.jpg" alt="">
             </div>
         </div>
-        <div class="fullScreen_mask">
+        <!-- <div class="fullScreen_mask">
             <div class="imgShow">
                 <div class="back"></div>
                 <div class="canclePoint">
@@ -1217,7 +1217,7 @@
                 </div>
                 <img src="./素材/10-公主故事屋/princess_10.jpg" alt="">
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div class="returnBut">
