--- a/GroupProject-Annie's garden/FrontEnd/talk-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/talk-index.html
@@ -114,7 +114,12 @@
             flex-flow: column;
             margin-left: 88px;
         }
-
+        /* .page_6_specialContainer .textBox_container{
+            border-radius: 10px;
+            padding: 3px;
+            border:2px #9F416B solid; 
+            margin-bottom: 47px;
+        } */
         .name {
             margin-bottom: 47px;
             width: 100%;
@@ -122,6 +127,7 @@
             background-color: white;
             border-radius: 10px;
             border: 2px #9F416B solid;
+            padding: 5px 20px;
         }
 
         .telephone {
@@ -131,28 +137,29 @@
             background-color: white;
             border-radius: 10px;
             border: 2px #9F416B solid;
+            padding: 5px 20px;
         }
 
         .e_mail {
-            margin-bottom: 65px;
+            margin-bottom: 47px;
             width: 100%;
             height: 60px;
             background-color: white;
             border-radius: 10px;
             border: 2px #9F416B solid;
+            padding: 5px 20px;
         }
 
         .text {
-            margin-bottom: 50px;
+            margin-bottom: 68px;
             width: 100%;
             max-height: 265px;
             min-height: 265px;
             background-color: white;
             border-radius: 10px;
             border: 2px #9F416B solid;
-
-            vertical-align: top;
             padding: 0;
+            padding: 20px 20px;
         }
 
         .textBox .button {
@@ -280,7 +287,7 @@
             }
 
             .page_6_specialContainer .textBox {
-
+                align-items: center;
                 margin-left: unset;
             }
 
@@ -483,11 +490,16 @@
                 </iframe>
             </div>
             <div class="textBox">
-                <input type="text" name="" id="name" placeholder="   姓名" class="name">
-                <input type="text" name="" id="telephone" placeholder="   連絡電話" class="telephone">
-                <input type="text" name="" id="e_mail" placeholder="   E-mail" class="e_mail">
-                <textarea name="" id="text" placeholder="   給安妮的悄悄話" class="text"></textarea>
- 
+                <!-- <div class="textBox_container"> </div>
+                <div class="textBox_container"> </div>
+                <div class="textBox_container">  </div>
+                <div class="textBox_container">  </div> -->
+                
+                <input type="text" name="" id="name" placeholder="姓名" class="name">
+                <input type="text" name="" id="telephone" placeholder="連絡電話" class="telephone">
+                <input type="text" name="" id="e_mail" placeholder="E-mail" class="e_mail">
+                <textarea name="" id="text" placeholder="想要預約或是有意見都歡迎跟安妮說喔!!" class="text"> </textarea>
+
                 <input type="submit" class="button" value="送    出">
       
             </div>
