--- a/GroupProject-Annie's garden/FrontEnd/eat-index.html
+++ b/GroupProject-Annie's garden/FrontEnd/eat-index.html
@@ -989,7 +989,7 @@
 
             </div>
             <div class="banner_decorationBox2">
-                <div class="banner_text2 "> >> MENU下載</div>
+                <div class="banner_text2 "> >> 觀看MENU</div>
             </div>
         </div>
         <div class="box_container ">
